# aello

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
claude-internal/TechnicalDirector/memory/: MEMORY.md  aello-architecture-decisions.md  aello-ci-release.md  aello-dev-gotchas.md  aello-migration-help-todo.md  aello-open-source.md  aello-overview.md  aello-tui-design.md  working-style.md
claude-internal/TechnicalDirector/skills/handoff/: SKILL.md
claude-internal/TechnicalDirector/skills/sync/: SKILL.md
claude-internal/TechnicalDirector/skills/twosentences/: SKILL.md
docs/: capabilities.md  concepts.md  migrate.md
scripts/: demo-recording.md
skills/sync/: SKILL.md
src/: auth.rs  config.rs  docs.rs  github.rs  hooks_post_compact.py  hooks_session_end.py  launch.rs  main.rs  models.rs  project.rs  sessions.rs  templates.rs  tui.rs  update.rs
templates/: coder.md  memory-working-style.md  sysadmin.md
