[package]
name = "aello"
version = "0.1.0"
edition = "2021"
description = "Isolated Claude Code environments — like venvs, but for AI agents"

[[bin]]
name = "aello"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
