[package]
name = "aello"
version = "0.1.49"
edition = "2021"
description = "Isolated Claude Code environments — like venvs, but for AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryha0008-boop/aello"
homepage = "https://github.com/ryha0008-boop/aello"
readme = "README.md"
keywords = ["claude", "claude-code", "agents", "cli", "isolation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aello"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
serde_json = "1"
ureq = { version = "2", features = ["json", "tls"] }
ratatui = "0.29"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
